<resources>
    <string name="app_name">Calk</string>
    <string name="calk_default">0</string>
    <string name="c">C</string>
    <string name="change_sign">+/-</string>
    <string name="percent">%</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="point">.</string>
    <string name="x">X</string>
    <string name="slash">/</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="equal">=</string>
    <string name="Sh">Ш</string>
    <string name="bracker1">(</string>
    <string name="bracket2">)</string>
    <string name="inv">Inv</string>
    <string name="in">in</string>
    <string name="Int">int</string>
    <string name="sinh">Sinh</string>
    <string name="sin">Sin</string>
    <string name="x_2">x^2</string>
    <string name="calk_type">Инженерный/Обычный</string>
    <string name="options">Настройки</string>
    <string name="ok">Ок</string>
    <string name="options2">Настройки</string>
    <string name="link">/Память устройства/Pictures/default.png</string>
</resources>
